data/derived/comb/progs/unify/prog4411.ml.out
Characters 233-237:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type int * 'a list
       but an expression was expected of type int * int
       Type 'a list is not compatible with type int 
